# HandTrack

./: CMakeLists.txt  README.md  conanfile.py  main.cpp
header/: skinDetector.hpp
source/: skinDetector.cpp
src/common/: misc.cpp  misc.h  paths.h
src/motion_detector/: motion_detector.cpp  motion_detector.h
src/skin_detector/: skin_detector.cpp  skin_detector.h
src/slider/: slider.cpp  slider.h
src/video_window/: video_window.cpp  video_window.h
